# QtUpdateSystem

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  QtUpdateSystem.pro  QtUpdateSystem.qbs  README.md  index.html  params.json
Packager/: Packager.pro  packagerplugin.cpp  packagerplugin.h
Updater/: Updater.pro  updater.cpp  updater.h  updater_global.h
examples/launcher/: CMakeLists.txt  borderlesswindow.cpp  borderlesswindow.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  ressources.qrc  updatedialog.cpp  updatedialog.h  updatedialog.ui
examples/launcher/content/: Button.qml  Input.qml  Label.qml
src/: CMakeLists.txt  exceptions.h  packagemanager.cpp  packagemanager.h  packager.cpp  packager.h  qtupdatesystem.cpp  qtupdatesystem.h  qtupdatesystem_global.h  remoteupdate.cpp  remoteupdate.h  repository.cpp  repository.h  src.pro  src.qbs  updater.cpp  updater.h
src/common/: exception.h  file.cpp  file.h  files.cpp  files.h  jsonutil.cpp  jsonutil.h  lzma.cpp  lzma.h  package.cpp  package.h  packagemetadata.cpp  packagemetadata.h  packages.cpp  packages.h  utils.cpp  utils.h  version.cpp  version.h  versions.cpp  versions.h
src/errors/: warning.cpp  warning.h
src/operations/: adddirectoryoperation.cpp  adddirectoryoperation.h  addoperation.cpp  addoperation.h  operation.cpp  operation.h  patchoperation.cpp  patchoperation.h  removedirectoryoperation.cpp  removedirectoryoperation.h  removeoperation.cpp  removeoperation.h
src/packager/: compressfiletask.cpp  compressfiletask.h  packagertask.cpp  packagertask.h  patchfiletask.cpp  patchfiletask.h  taskinfo.cpp  taskinfo.h
src/tools/: brotli.cpp  brotli.h  lzma.cpp  lzma.h  xdelta3.cpp  xdelta3.h
src/tools/lzma/: config.h
src/updater/: copythread.cpp  copythread.h  downloadmanager.cpp  downloadmanager.h  filemanager.cpp  filemanager.h  localrepository.cpp  localrepository.h  oneobjectthread.h
tests/: CMakeLists.txt  main.cpp  tests.pro  tests.qbs  testutils.cpp  testutils.h  tst_packagemanager.cpp  tst_packagemanager.h  tst_packager.cpp  tst_packager.h  tst_repository.cpp  tst_repository.h  tst_updatechain.cpp  tst_updatechain.h  tst_updater.cpp  tst_updater.h  utils.cpp  utils.h
tests/PackageManagerTests/: PackageManagerTests.pro  tst_packagemanagertests.cpp
tests/PackagerTests/: PackagerTests.pro  tst_packagertest.cpp
tests/PackagerTests/test1/new/: path_diff.txt
tests/PackagerTests/test1/old/: path_diff.txt
tests/data/repo_v1_rev1/: complete_1.metadata  current  packages  patch1_2  patch1_2.metadata  versions
tests/data/repo_v1_rev2/: current  patch1_2.metadata  versions
tests/data/repository_add/expected/: current  packages  versions
tests/data/repository_add/init/: current  packages  patchREV1_REV2.metadata  test2.metadata  versions
tests/data/repository_new/: packages  versions
tests/data/rev1/: path_diff2.txt
tests/data/rev1_local/: status.ini  status.json
tests/data/rev2/: empty_dir  path_diff.txt  path_diff2.txt
tests/data/updater_copy/init_repo/: status.ini  status.json
tests/data/updater_copy/local_repo/: patch_same.txt  path_diff.txt  rmfile.txt  status.json
tests/data/updater_isManaged/: rmfile.txt  status.ini  status.json
tests/packagemanager_testAdd/dir/: test2
tests/packagemanager_testAdd/expected/: current  packages  versions
tests/packagemanager_testAdd/init/: packages  versions
tests/packagemanager_testNew/expected/: packages
tests/packager_test1/new/: add.txt
tests/packager_test1/old/: path_diff2.txt
tests/repository_testAdd/dir/: test1
tests/repository_testAdd/init/: current
tests/repository_testNew/dir/: test1.metadata
tests/updater_copy/local_repo/: status.ini
utils/: CMakeLists.txt
utils/packager/: CMakeLists.txt  main.cpp
utils/repository/: CMakeLists.txt  main.cpp
utils/updater/: CMakeLists.txt  main.cpp
